[L3]fixed gcc 8.3.0 -O3 caused a return bug

--- a/louvainmod/Makefile
+++ b/louvainmod/Makefile
@@ -56,8 +56,8 @@ PRODUCT_VER=$(strip $(shell cat VERSION))
 
 CCC = g++
 CXX = g++
-CXX := /tools/batonroot/rodin/devkits/lnx64/gcc-6.2.0/bin/g++
-$(warning [WARNING]: CXX is $(CXX). Now there is an undetected bug by -O3 gcc-8.3.0, so just using 6.2.0!)
+#CXX := /tools/batonroot/rodin/devkits/lnx64/gcc-6.2.0/bin/g++
+#$(warning [WARNING]: CXX is $(CXX). Now there is an undetected bug by -O3 gcc-8.3.0, so just using 6.2.0!)
 # -D PRINTINFO: print additional debug messages
 CXXFLAGS = -std=c++11 -DPRAGMA -fopenmp -fmessage-length=0  -fPIC -Wall -Wno-unknown-pragmas -Wno-unused-label \
     -Wno-unused-variable -Wno-sign-compare -Wno-unused-result -Wno-unused-but-set-variable \
