Added README.md in Makefile for fuzzymatch

--- a/fuzzymatch/Makefile
+++ b/fuzzymatch/Makefile
@@ -469,7 +469,7 @@ $(foreach f,$(STAGE_LIB_FILES),$(eval $(call STAGE_LIB_RULE,$(f))))
 STAGE_EXAMPLE_FILE_NAMES = \
 	cpp/fuzzymatch_test.cpp cpp/Makefile \
 	data/people.csv data/txdata.csv \
-	python/pythondemo.py python/run.sh
+	python/pythondemo.py python/run.sh python/README.md
 
 STAGE_EXAMPLE_FILES = $(addprefix examples/,$(STAGE_EXAMPLE_FILE_NAMES))
 STAGE_STAGED_EXAMPLE_FILES = $(addprefix $(STAGE_DIR)/,$(STAGE_EXAMPLE_FILES))
